--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Martel+Sans' rel='stylesheet' type='text/css'>
     <script src="https://use.fontawesome.com/450b4d805f.js"></script>
-    <script type="text/javascript">
-        function showMsg() {
-            alert('Resume not yet available for download. Please contact by phone or email.');
-            return false;
-        }
-    </script>
 </head>
 
 <body>
@@ -27,7 +21,7 @@
                 <li><a href="#workexperience" class="navBut">Work Experience</a></li>
                 <li><a href="#projects" class="navBut">Projects</a></li>
                 <li><a href="#contactjerrid" class="navBut">Contact Jerrid</a></li>
-                <li><a href="#" class="navBut" onclick="showMsg()">Resume</a></li>
+                <li><a href="content/Jerrid Schilling Resume 2016.pdf" target="blank" class="navBut">Resume</a></li>
                 <li><a href="#pageTop" class="navBut">Back to top</a></li>
             </ul>
         </nav> 
