--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
                 <h2 class="sectionHeading">About Jerrid</h2>
                 <hr>
                 <article>
-                    <p>Jerrid Schilling was born in Aurora, CO and raised in Wyoming. He has always had a passion for learning new things. He started programming in high school when a new class was offered to students called Intro to Video Game Development. He programmed simple video games using a programming language known as DarkBASIC. From here he delved into a few other new computer courses that were focused on computer animation. After doing very well in these classes he was asked by the class instructor to student teach and help him during some of his classes. After high school, Jerrid attended the University of Wyoming in Laramie, WY.</p>
+                    <p>Jerrid Schilling was born in Aurora, CO and raised in Wyoming. He has always had a passion for technology and learning new things. He started programming in high school when a new class was offered to students called Intro to Video Game Development. He programmed simple video games using a programming language known as DarkBASIC. From here he delved into a few other new computer courses that were focused on computer animation. After doing very well in these classes he was asked by the class instructor to student teach and help him during some of his classes. After high school, Jerrid attended the University of Wyoming in Laramie, WY.</p>
                 </article>
                 <article>
-                    <p>He began college as an Architectual Engineering major, due to his family's strong background in woodworking and construction, but later decided that computers and technology were more appealing. This lead him to change his major to Electrical Engineering. After completing all of the base course requirements he changed his major to Computer Engineering as it better suited his passions and he graduated on May 14th, 2016 with a Bachelor's degree in Computer Engineering. He has worked multiple internships throughout his time in college and is constantly working to learn new technologies and languages. He has also joined a few local programming/coding meetups including Cheyenne Computer Professionals, Learn To Code Fort Collins, Northern Colorado .NET User Group, and PyNoCO. These have proved to be a great resource for meeting people, collaborating, and learning new things.</p>
+                    <p>As computers and technology were highly appealing to Jerrid, he decided to major in Electrical Engineering. After completing all of the base course requirements he changed his major to Computer Engineering as it better suited his passions and he graduated on May 14th, 2016 with a Bachelor's degree in Computer Engineering. He has worked multiple internships throughout his time in college and is constantly working to learn new technologies and languages. He has also joined a few local programming/coding meetups including Cheyenne Computer Professionals, Learn To Code Fort Collins, Northern Colorado .NET User Group, and PyNoCO. These have proven to be a great resource for meeting people, collaborating, and learning new things.</p>
+                </article>
+                <article>
+                    <p>Outside of computers and programming, Jerrid spends much of his time camping, fishing, and hiking with his wife, Evan, and his two dogs, Asher and Kodah. He also loves woodworking and uses a lot of the skills and knowledge he gained from his father, Mike and his grandfater, Everett as they are a great source of inspriation for him.</p>
                 </article>
                 
             </section>
@@ -82,13 +85,19 @@
                     <p>June 2015 - May 2016</p>
                     <ul class="expList">
                         <li>
-                            Assist the IT department with front end desktop support for other employees of the company.
+                            Telecommute during the school year, work unsupervised, and consistently meet work deadlines.
                         </li>
                         <li>
-                            Research and design a database-driven dashboard web application for key performance indicator reports pertaining to the plant maintenance department.
+                            Designed, implemented, and maintain a database driven web application.
                         </li>
                         <li>
-                            Help with upgrades to the server room.
+                            Perform technical support for HFC employees.
+                        </li>
+                        <li>
+                            Work successfully alone and with a team.
+                        </li>
+                        <li>
+                            Work 40 hours a week during winter and summer breaks and an average of 15 hours a week during the academic year while being a full-time college student.
                         </li>
                     </ul>
                 </article>
@@ -100,16 +109,13 @@
                     <p>March 2014 - May 2015</p>
                     <ul class="expList">
                         <li>
-                            Oversee employees.
+                            Promoted to Floor Manager from Cashier in less than five months from hire date.
                         </li>
                         <li>
-                            Assign and follow up on daily tasks.
+                            Directed 4-12 employees, depending upon the shift, with daily tasks and services.
                         </li>
                         <li>
-                            Lead employees on team projects.
-                        </li>
-                        <li>
-                            Educate employees on services offered by Ace Hardware.
+                            Assisted guests through problem solving and providing solutions to their home projects; used my techinal knowledge and past experiences.
                         </li>
                     </ul>
                 </article>
@@ -122,13 +128,13 @@
                     <p>May 2012 - August 2012</p>
                     <ul class="expList">
                         <li>
-                            Maintain/Repair electrical systems on industrial mining equipment.
+                            Maintained, repaired, and upgraded electrical systems of mining equipment.
                         </li>
                         <li>
-                            Organize/Plan spare parts/tools storage building.
+                            Planned and organized a spare parts and tools storage building for the Electrical department.
                         </li>
                         <li>
-                            Design solar powered bus station for equipment operators.
+                            Designed and implemented a solar powered bus station for equipment operators.
                         </li>
                     </ul>
                 </article>
