--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <p>As computers and technology were highly appealing to Jerrid, he decided to major in Electrical Engineering. After completing all of the base course requirements he changed his major to Computer Engineering as it better suited his passions and he graduated on May 14th, 2016 with a Bachelor's degree in Computer Engineering. He has worked multiple internships throughout his time in college and is constantly working to learn new technologies and languages. He has also joined a few local programming/coding meetups including Cheyenne Computer Professionals, Learn To Code Fort Collins, Northern Colorado .NET User Group, and PyNoCO. These have proven to be a great resource for meeting people, collaborating, and learning new things.</p>
                 </article>
                 <article>
-                    <p>Outside of computers and programming, Jerrid spends much of his time camping, fishing, and hiking with his wife, Evan, and his two dogs, Asher and Kodah. He also loves woodworking and uses a lot of the skills and knowledge he gained from his father, Mike and his grandfater, Everett as they are a great source of inspriation for him.</p>
+                    <p>Outside of computers and programming, Jerrid spends much of his time camping, fishing, and hiking with his wife, Evan, and his two dogs, Asher and Kodah. He also loves woodworking and uses a lot of the skills and knowledge he gained from his father, Mike, and his grandfater, Everett, as they are a great source of inspriation for him.</p>
                 </article>
                 
             </section>
