Update to Work Experience
Changed end date on Holly Frontier

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <h3>Holly Frontier Corp</h3>
                     <h4>IT/Software Engineering Intern</h4>
                     <p>Cheyenne, Wyoming</p>
-                    <p>June 2015 - May 2016</p>
+                    <p>June 2015 - Present</p>
                     <ul class="expList">
                         <li>
                             Telecommute during the school year, work unsupervised, and consistently meet work deadlines.
