Added Group section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
                 <article>
                     <p>Outside of computers and programming, Jerrid spends much of his time camping, fishing, and hiking with his wife, Evan, and his two dogs, Asher and Kodah. He also loves woodworking and uses a lot of the skills and knowledge he gained from his father, Mike, and his grandfather, Everett, as they are a great source of inspriation for him.</p>
                 </article>
-
+                <h3>Group Involvement</h3>
+                <ul>
+                    <li>Cheyenne Computer Professionals</li>
+                    <li>PyNoCo</li>
+                    <li>Northern Colorado .NET User Group</li>
+                    <li>Learn to Code Fort Collins</li>
+                </ul>
             </section>
 
             <section id="education">
