updating index.html
repairing the main website, until the new one is complete

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div class="wrapper">
-    <div class="dropdownNav">
+    <aside>
       <nav class="sideNav">
         <div class="icon">
           <i class="fa fa-code fa-3x sidebarIcon"></i>
@@ -27,7 +27,8 @@
           <li><a href="portfolio/personalSiteV1.0/index.html" class="navBut">Original Site</a></li>
         </ul>
       </nav>
-    </div>
+    </aside>
+          
 
     <div class="content">
 
