Added under construction note

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <div class="headText">
           <h1>Jerrid Schilling</h1>
           <h2>Software Engineer</h2>
+          <h3 style="color: red;">New site under construction!</h3>
         </div>
       </header>
 
