cleanup of development branch
deleted a few files and renamed some others in preparation for active development

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Jerrid Schilling</title>
-  <!-- <link rel="stylesheet" type="text/css" href="css/style.css"> -->
-  <link rel="stylesheet" type="text/css" href="css/test.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
   <link href='https://fonts.googleapis.com/css?family=Martel+Sans' rel='stylesheet' type='text/css'>
   <script src="js/main.js"></script>
   <script src="https://use.fontawesome.com/450b4d805f.js"></script>
@@ -27,18 +26,6 @@
           <a href="#contactjerrid" class="nav-btn">Contact</a>
           <a href="content/Jerrid Schilling Resume 2016.pdf" target="blank" class="nav-btn">Resume</a>
         </div>
-
-<!--
-        <ul class="nav-links">
-          <li><a href="#aboutjerrid" class="navBut">About Jerrid</a></li>
-          <li><a href="#education" class="navBut">Education</a></li>
-          <li><a href="#workexperience" class="navBut">Work Experience</a></li>
-          <li><a href="#projects" class="navBut">Projects</a></li>
-          <li><a href="#contactjerrid" class="navBut">Contact Jerrid</a></li>
-          <li><a href="content/Jerrid Schilling Resume 2016.pdf" target="blank" class="navBut">Resume</a></li>
-          <li><a href="portfolio/personalSiteV1.0/index.html" class="navBut">Original Site</a></li>
-        </ul>
--->
       </div>
     </nav>
 
