Updated link to new resume

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="#workexperience" class="navBut">Work Experience</a></li>
           <li><a href="#projects" class="navBut">Projects</a></li>
           <li><a href="#contactjerrid" class="navBut">Contact Jerrid</a></li>
-          <li><a href="content/Jerrid Schilling Resume 2016.pdf" target="blank" class="navBut">Resume</a></li>
+          <li><a href="content/Resume 2016 Jerrid Schilling.pdf" target="blank" class="navBut">Resume</a></li>
           <li><a href="#pageTop" class="navBut">Back to top</a></li>
           <li><a href="portfolio/personalSiteV1.0/index.html" class="navBut">Original Site</a></li>
         </ul>
