Fixed typo in work experience

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <ul class="expList">
               <li>Promoted to Floor Manager from Cashier in less than five months from hire date.</li>
               <li>Directed 4-12 employees, depending upon the shift, with daily tasks and services.</li>
-              <li>Assisted guests through problem solving and providing solutions to their home projects; used my techinal knowledge and past experiences.</li>
+              <li>Assisted guests through problem solving and providing solutions to their home projects; used my technical knowledge and past experiences.</li>
             </ul>
           </article>
 
